Fix navigation styling, remove Facebook link, and fix .page alignment

--- a/public/scss/_navigation.scss
+++ b/public/scss/_navigation.scss
@@ -38,7 +38,7 @@
         text-decoration: none;
         }
       i  {
-        margin: 0 1rem 0;
+        margin: 0 -1.7rem 0 1rem;
         font-size: 1.75rem;
         float:left;
       }
