--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -42,7 +42,7 @@ $skillsets:
   opacity:1;
   z-index:8890;
   height:100%;
-  left:5%;
+  left:25%;
   @include breakpoint(medium) {
     width:75%;
     right:0;
